--- a/src/components/CartItem.js/CartItem.scss
+++ b/src/components/CartItem.js/CartItem.scss
@@ -83,3 +83,68 @@
         margin-bottom: 20px;
     }
 }
+
+//new
+
+.cart__product__item{
+    display: flex;
+    align-items: center;
+    padding: 10px 10px 0 10px;
+
+    .product__img{
+        width: 20%;
+        height: 120px;
+        object-fit: contain;
+    }
+    .product__name{
+        width: 62%;
+        padding: 0px 2px;
+        
+        &-title{
+            font-weight: 300;
+            padding-bottom: 5px;
+        }
+
+        .product__qty{
+            width: 30%;
+            .cart__item-qty{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 1.5rem;
+                font-weight: 300;
+                text-align: center;
+                border: 1px solid #ced4da;
+                padding: 6px;
+                border-radius: 4px;
+        
+                .cart__item-qty-btn{
+                    width: 40px;
+                    cursor: pointer;
+        
+                    i{
+                        font-size: 1.3rem;
+                        opacity: 0.8;
+                    }
+                }
+        
+                .cart__item-qty-input{
+                    width: 100%;
+                    font-size: 1.6rem;
+                }
+            }
+        }
+    }
+    .product__price{
+        width: 18%;
+        text-align: center;
+        color: red;
+        font-size: 1.6rem;
+        font-weight: bold;
+
+        & div:nth-child(2){
+            padding-top: 6px;
+            cursor: pointer;
+        }
+    }
+}
