--- a/src/components/DefaultLayout/Footer/Footer.scss
+++ b/src/components/DefaultLayout/Footer/Footer.scss
@@ -1,5 +1,6 @@
 .footer{
-    background-color: #e3e6f2;
+    background-color: #333;
+    color: #e2e2e2;
 
     .footer__main{
         display: flex;
@@ -17,11 +18,11 @@
                 list-style: none;
             }
             .item__link{
-                color: #000;
+               color: #e2e2e2;;
                 font-size: 1.5rem;
                 line-height: 1.75;
                 &:hover{
-                    color: var(--primary-color);
+                    color: #ffe500; 
                 }
             }
         }
