--- a/src/pages/clients/Cart/Cart.scss
+++ b/src/pages/clients/Cart/Cart.scss
@@ -5,6 +5,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        margin: 30px 0 80px 0;
 
         .cart__title{
             font-size: 2.2rem;
@@ -110,5 +111,226 @@
 @media screen and (max-width: 767px) {
     .cart__checkout{
         margin-left: 0px;
+    }
+}
+
+//new
+
+.cart{
+    width: 50%;
+    margin: 0 auto;
+
+    .cart__header{
+        padding: 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-weight: bold;
+
+        &-link{
+            color: #288ad6;
+
+        }
+    }
+
+    .cart__content{
+        box-shadow: 0 0 18px rgb(0 0 0 / 12%);
+        .cart__product__item{
+            display: flex;
+            align-items: center;
+            padding: 10px 10px 0 10px;
+
+            .product__img{
+                width: 20%;
+                height: 120px;
+                object-fit: contain;
+            }
+            .product__name{
+                width: 62%;
+                padding: 0px 2px;
+                
+                &-title{
+                    font-weight: 300;
+                    padding-bottom: 5px;
+                }
+
+                .product__qty{
+                    width: 30%;
+                    .cart__item-qty{
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        font-size: 1.5rem;
+                        font-weight: 300;
+                        text-align: center;
+                        border: 1px solid #ced4da;
+                        padding: 6px;
+                        border-radius: 4px;
+                
+                        .cart__item-qty-btn{
+                            width: 40px;
+                            cursor: pointer;
+                
+                            i{
+                                font-size: 1.3rem;
+                                opacity: 0.8;
+                            }
+                        }
+                
+                        .cart__item-qty-input{
+                            width: 100%;
+                            font-size: 1.6rem;
+                        }
+                    }
+                }
+            }
+            .product__price{
+                width: 18%;
+                text-align: center;
+                color: red;
+                font-size: 1.6rem;
+                font-weight: bold;
+
+                & div:nth-child(2){
+                    padding-top: 6px;
+                    cursor: pointer;
+                }
+            }
+        }
+
+        .cart__total{
+            margin: 10px 0;
+            padding: 10px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-weight: 300;
+            border-top: 1px solid #ccc;
+            border-bottom: 1px solid #ccc;
+
+            & span:nth-child(2){
+                font-size: 1.6rem;
+                color: red;
+                font-weight: bold;
+            }
+        }
+
+        .cart__customer{
+            padding: 10px;
+
+            .item{
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                margin-top: 10px;
+
+                label{
+                    min-width: 130px;
+                    span{
+                        color: red;
+                    }
+                }
+
+                .item-input{
+                    flex: 1;
+                    font-size: 1.4rem;
+                    padding: 0 10px;
+                    height: 34px;
+                    border-radius: 5px;
+                    border: 1px solid #cdcdcd;
+                }
+                .item-textarea{
+                    resize: none;
+                    flex: 1;
+                    font-size: 1.4rem;
+                    padding: 5px 10px;
+                    height: 34px;
+                    min-height: 45px;
+                    border-radius: 5px;
+                    border: 1px solid #cdcdcd;
+                    font-family: sans-serif;
+                }
+            }
+
+            &__header{
+                text-transform: uppercase;
+                font-size: 1.9rem;
+                font-weight: 300;
+            }
+
+            &__note{
+                margin: 8px 0;
+                span{
+                    color: red;
+                }
+            }
+        }
+
+        .cart__pay-total{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            //padding: 10px 10px 0 10px;
+            padding: 10px 0;
+            border-top: 1px solid #ccc;
+            margin: 10px 10px 0 10px;
+
+            & span:nth-child(2){
+                font-size: 1.6rem;
+                color: red;
+                font-weight: bold;
+            }
+        }
+
+        .cart__btn{
+            margin: 20px 0;
+            text-align: center;
+            
+
+            &-buy{
+                margin-right: 4px;
+                border-radius: 5px;
+                background: -webkit-linear-gradient(top,#ffef98,#ffdf00);
+
+                & p:nth-child(1){
+                    text-transform: uppercase;
+                }
+                & p:nth-child(2){
+                    font-weight: 400;
+                    padding-top: 8px;
+                }
+            }
+
+            &-online{
+                margin-right: 4px;
+                color: #fff;
+                border-radius: 5px;
+                background: -webkit-linear-gradient(top,#666,#000);
+                
+                & p:nth-child(1){
+                    text-transform: uppercase;
+                }
+                & p:nth-child(2){
+                    font-weight: 400;
+                    padding-top: 8px;
+                }
+            }
+
+            & button:disabled{
+                cursor: not-allowed;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .cart{
+        width: 100%;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .cart{
+        width: 80%;
     }
 }
