--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 :root{
+
+    --text-color-price: #E10C04;
+
     --primary-color: #33cc99;
     --extra-color:  #088178;
     --border-color: #cce7d0;
@@ -47,7 +50,7 @@ html{
 
 body{
     font-family: "Roboto", sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
 }
 
 @media screen and (max-width: 767px) {
