--- a/src/components/ProductView/ProductView.scss
+++ b/src/components/ProductView/ProductView.scss
@@ -5,18 +5,19 @@
 .product__img-list{
     
     .product__img-main{
-        height: 460px;
+        height: 520px;
         border: 1px solid var(--border-color);
-        object-fit: contain;
+        object-fit: cover;
     }
 
     .product__img-slide{
         display: flex;
         justify-content: space-between;
+    
 
         .product__img-item{
             width: 19.2%;
-            object-fit: cover;
+            object-fit: contain;
             &:active{
                 border: 1px solid var(--primary-color);
             }
@@ -68,7 +69,7 @@
 
     .product__price{
         margin-bottom: 18px;
-        color: var(--extra-color);
+        color: var(--text-color-price);
         font-weight: 800;
         font-size: 2.2rem;
         padding-right: 8px;
@@ -106,7 +107,7 @@
         }
     }
 
-    .product__description{
+    .product__des{
         margin-bottom: 20px;
 
         &-title{
@@ -123,31 +124,76 @@
     }
 
     .product__submit{
+        display: flex;
+        flex-direction: column;
+        width: 70%;
+
+        @media screen and (max-width: 1023px) {
+            width: 100%;
+        }
+       
+
         button{
-            padding: 12px;
             border: none;
             outline: none;
-            border-radius: 2px;
-            margin-left: 2px;
-            font-size: 1.7rem;
-            font-weight: 600;
-            color: #fff;
+            border-radius: 5px;
         }
 
-        &-cart{
-            background-color: var(--extra-color);
-            &:hover{
-                opacity: 0.8;
-                cursor: pointer;
+        .btn-group{
+            display: flex;
+            align-items: center;
+            gap: 2%;
+
+            .btn-cart, .btn-online{
+                background: -webkit-linear-gradient(top, #666, #000);
+                display: block;
+                padding: 12px 16px;
+                width: 49%;
+    
+                span{
+                    display: block;
+                }
+    
+                & span:nth-child(1){
+                    font-size: 1.7rem;
+                    color: #fee437;
+                    text-transform: uppercase;
+                }
+    
+                & span:nth-child(2){
+                    color: #fff;
+                    font-size: 1.4rem;
+                    font-weight: 300;
+                }
+            }
+
+            .btn-online:hover{
+                cursor: not-allowed;
             }
         }
 
-        &-buy{
-            background-color: var(--primary-color);
-            &:hover{
-                opacity: 0.8;
-                cursor: pointer;
-            }
+
+        .btn-buy{
+           background: -webkit-linear-gradient(top, #ffef98, #ffdf00);
+           padding: 12px 50px;
+           margin-bottom: 8px;
+
+           span{
+            color: #000;
+            display: block;
+           }
+
+           & span:nth-child(1){
+            text-transform: uppercase;
+            font-size: 1.8rem;
+            font-weight: 700;
+           }
+
+           & span:nth-child(2){
+            font-size: 1.4rem;
+            font-weight: 300;
+           }
+           
         }
     }
 }
