custome template product view

--- a/src/pages/clients/NotFound/NotFound.scss
+++ b/src/pages/clients/NotFound/NotFound.scss
@@ -35,7 +35,7 @@
     }
 
     .page-404__img{
-        width: 45%;
+        max-width: 350px;
         background-color: #fff;
         margin-bottom: 22px;
         margin-top: 80px;
