--- a/src/components/ProductView/ProductView.scss
+++ b/src/components/ProductView/ProductView.scss
@@ -1,13 +1,14 @@
 .product__detail{
-    margin: 20px 0;
+
 }
 
 .product__img-list{
     
     .product__img-main{
-        height: 520px;
+        height: 400px;
         border: 1px solid var(--border-color);
-        object-fit: cover;
+        object-fit: contain;
+        width: 100%;
     }
 
     .product__img-slide{
@@ -31,13 +32,12 @@
     .product__title{
         font-size: 2.6rem;
         font-weight: 600;
-        margin-bottom: 6px;
     }
 
     .product__rate{
         display: flex;
         align-items: center;
-        margin-bottom: 22px;
+        margin: 4px 0 6px; 
 
         .product__rate-list{
             display: flex;
