--- a/src/pages/clients/Home/Home.scss
+++ b/src/pages/clients/Home/Home.scss
@@ -7,6 +7,36 @@
 
 }
 
+.product__category__title{
+    max-width: 940px;
+    margin: 0 auto 20px;
+    font-size: 2.4rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    text-align: center;
+    position: relative;
+    color: #ffea00;
+
+    span{
+        padding: 4px 20px;
+        z-index: 2;
+        position: relative;
+        background: #2a3740;
+
+    }
+
+    &::after{
+        content: "";
+        width: 100%;
+        height: 1px;
+        background-color: #ccc;
+        position:absolute;
+        top: 50%;
+        left: 0;
+        z-index: 1;
+    }
+}
+
 
 .product__category__list{
     border-left: 1px solid #f1f1f1;
@@ -28,7 +58,7 @@
 }
 
 .product__show-all{
-    margin: 20px 0 40px;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
