update template cart page and change logo

--- a/src/components/DefaultLayout/Header/Header.scss
+++ b/src/components/DefaultLayout/Header/Header.scss
@@ -24,7 +24,7 @@
                 flex-grow: 1;
                 .logo__brand{
                     font-size: 4rem;
-                    background: -webkit-linear-gradient(#f2df92, #d6b478);
+                    background: -webkit-linear-gradient(#f6e544, #ffb800);
                     -webkit-background-clip: text;
                     background-clip: text;
                     -webkit-text-fill-color: transparent;
