--- a/src/components/DefaultLayout/Footer/Footer.scss
+++ b/src/components/DefaultLayout/Footer/Footer.scss
@@ -1,6 +1,8 @@
 .footer{
-    background-color: #333;
-    color: #e2e2e2;
+   // background-color: #333;
+    background-image: linear-gradient(#333, #000);
+   // color: #e2e2e2;
+   color: #b6a395;
 
     .footer__main{
         display: flex;
@@ -11,6 +13,10 @@
         //General
         .title{
             margin-bottom: 10px;
+            text-transform: uppercase;
+            font-size: 1.5rem;
+            font-weight: 300;
+            color: #ffae00;;
         }
 
         .list__group{
@@ -18,8 +24,8 @@
                 list-style: none;
             }
             .item__link{
-               color: #e2e2e2;;
-                font-size: 1.5rem;
+                color: #b6a395;
+                font-size: 1.4rem;
                 line-height: 1.75;
                 &:hover{
                     color: #ffe500; 
@@ -35,7 +41,6 @@
             }
             .logo{
                 width: 210px;
-                margin: 10px 0;
             }
 
             p{
@@ -69,6 +74,8 @@
         }
     }
 }
+
+
 
 @media (max-width: 730px){
     .footer__main{
