--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -38,7 +38,7 @@
     --coupon-code-background: #e60912;
 }
 
-*{
+*, *::after, *::before{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -51,12 +51,7 @@ html{
 body{
     font-family: "Roboto", sans-serif;
     font-size: 1.6rem;
-}
-
-@media screen and (max-width: 767px) {
-    body{
-        //overflow-x: hidden;
-    }
+    //background-color: #F2f2f2;
 }
 
 img{
