--- a/src/pages/clients/Cart/Cart.scss
+++ b/src/pages/clients/Cart/Cart.scss
@@ -1,7 +1,10 @@
+
 .cart{
     width: 50%;
     margin: 0 auto;
-
+    
+    --color-button: #f3f4f6;
+    
     .cart__empty{
         display: flex;
         flex-direction: column;
@@ -40,25 +43,44 @@
         }
     }
 
-    .cart__header{
-        padding: 10px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+    .cart__header{   
         font-weight: bold;
+        text-align: center;
+        margin: 20px 0 10px;
+    }
 
-        &-link{
+    .cart__other-product{
+        text-align: center;
+        border: 1px solid #e5e7eb;
+        padding: 8px 0;
+        margin-top: 10px;
+        cursor: pointer;
+        font-size: 1.5rem;
+        font-weight: 700;
+        
+
+        .cart__header-link{
             color: #288ad6;
+            display: block;
 
+            &:hover{
+                color: #000;
+            }
         }
     }
 
     .cart__content{
         box-shadow: 0 0 18px rgb(0 0 0 / 12%);
+        background-color: #fff;
+        border-radius: 8px;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
         .cart__product__item{
             display: flex;
             align-items: center;
-            padding: 10px 10px 0 10px;
 
             .product__img{
                 width: 20%;
@@ -119,14 +141,15 @@
         }
 
         .cart__total{
-            margin: 10px 0;
             padding: 10px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            font-size: 1.5rem;
             font-weight: 300;
-            border-top: 1px solid #ccc;
-            border-bottom: 1px solid #ccc;
+            border-bottom: 1px solid #e5e7eb;
+            background-color: var(--color-button);
+            border-radius: 5px;
 
             & span:nth-child(2){
                 font-size: 1.6rem;
@@ -136,8 +159,7 @@
         }
 
         .cart__customer{
-            padding: 10px;
-
+         
             .item{
                 display: flex;
                 align-items: center;
@@ -155,7 +177,7 @@
                     flex: 1;
                     font-size: 1.4rem;
                     padding: 0 10px;
-                    height: 34px;
+                    height: 38px;
                     border-radius: 5px;
                     border: 1px solid #cdcdcd;
                 }
@@ -173,16 +195,9 @@
             }
 
             &__header{
-                text-transform: uppercase;
-                font-size: 1.9rem;
-                font-weight: 300;
-            }
-
-            &__note{
-                margin: 8px 0;
-                span{
-                    color: red;
-                }
+                font-size: 1.6rem;
+                font-weight: 700;
+                padding-top: 10px;
             }
         }
 
@@ -190,10 +205,12 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            //padding: 10px 10px 0 10px;
-            padding: 10px 0;
-            border-top: 1px solid #ccc;
-            margin: 10px 10px 0 10px;
+            padding: 10px;
+            border-bottom: 1px solid #e5e7eb;
+            background-color: var(--color-button);
+            font-size: 1.5rem;
+            font-weight: 300;
+            border-radius: 5px;   
 
             & span:nth-child(2){
                 font-size: 1.6rem;
@@ -203,17 +220,22 @@
         }
 
         .cart__btn{
-            margin: 20px 0;
-            text-align: center;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
             
 
+            --size-word: 1.6rem;
+
             &-buy{
-                margin-right: 4px;
                 border-radius: 5px;
-                background: -webkit-linear-gradient(top,#ffef98,#ffdf00);
+                //background: -webkit-linear-gradient(top,#ffef98,#ffdf00);
+                background: -webkit-linear-gradient(top,#288ad6,#0e74c2);
+                color: #fff;
 
                 & p:nth-child(1){
                     text-transform: uppercase;
+                    font-size: var(--size-word);
                 }
                 & p:nth-child(2){
                     font-weight: 400;
@@ -222,13 +244,13 @@
             }
 
             &-online{
-                margin-right: 4px;
                 color: #fff;
                 border-radius: 5px;
                 background: -webkit-linear-gradient(top,#666,#000);
                 
                 & p:nth-child(1){
                     text-transform: uppercase;
+                    font-size: var(--size-word);
                 }
                 & p:nth-child(2){
                     font-weight: 400;
