update template admin

--- a/src/pages/admin/components/Header/Header.scss
+++ b/src/pages/admin/components/Header/Header.scss
@@ -1,5 +1,6 @@
 .header__admin{
-    background-color: var(--extra-color);
+    //background-color: var(--extra-color);
+    background-image: linear-gradient(#333, #000);
     display: flex;
     justify-content: flex-end;
     height: 60px;
