--- a/src/pages/admin/components/Sidebar/Sidebar.scss
+++ b/src/pages/admin/components/Sidebar/Sidebar.scss
@@ -1,5 +1,6 @@
 .sidebar{
-    background-color: var(--extra-color);
+    //background-color: var(--extra-color);
+    background-image: linear-gradient(#333, #000);
     position: fixed;
     left: 0;    
     top: 0;
@@ -11,7 +12,6 @@
         font-size: 2.7rem;
         font-weight: 600;
         margin-bottom: 10px;
-        border-bottom: 1px solid #fff;
         color: #fff;
         text-align: center;
     }
@@ -35,7 +35,8 @@
 
         &-item{
             list-style: none;
-    
+            margin-top: 8px;
+
             .sidebar__list-link{
                 padding: 10px;
                 text-decoration: none;
