update some query

--- a/src/pages/admin/components/Layout/Layout.scss
+++ b/src/pages/admin/components/Layout/Layout.scss
@@ -9,5 +9,106 @@
             padding: 100px 50px 0;
         }
     }
+
+    
+    //table
+    .item__header{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-bottom: 2px solid #ccc;
+        padding-bottom: 10px;
+        margin-bottom: 14px;
+
+        .item__btn-add{
+            background-color: var(--extra-color);
+            outline: none;
+            border: none;
+            color: #fff;
+            font-size: 1.4rem;
+            font-weight: 600;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-left: 4px;
+        }
+    }
+
+    .item__content{
+        border: 1px solid #ccc;
+
+        .item__title{
+            color: #fff;
+            padding: 10px;
+            background-image: linear-gradient(#333, #000);
+        }
+
+        .item__body{
+            padding: 10px;
+
+            .item__control{
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 10px;
+    
+                .item__show-record-page{
+                    select{
+                        height: 30px;
+                        width: 50px;
+                    }
+                }
+        
+                .item__search{
+        
+                    &-input{
+                        width: 50%;
+                        outline: none;
+                        padding-left: 8px;
+                        height: 30px;
+                        width: 300px;
+                        margin-right: 4px;
+                    }
+        
+                    &-select{
+                        height: 30px;
+                        margin-right: 4px;
+                    }
+                }
+        
+                
+            }
+
+            .item__list{
+                thead{
+                    text-align: left;
+                    height: 40px;
+                    
+                    th{
+                        padding-left: 10px;
+                    }
+                    & th:nth-child(2){
+                        width: 400px;
+                    }
+                }
+               
+                tbody{
+                    text-align: left;
+                    
+                    tr td{
+                     padding-left: 10px;
+                    }
+                }
+            }
+        }
+
+        .item__footer{
+            display: flex;
+            justify-content: space-between;
+            margin-top: 6px;
+            
+            .item__show-record{
+                font-size: 1.5rem;
+            }
+        }
+    }
 }
 
