--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -124,7 +124,7 @@ button{
 
 .btn-edit{
     margin-right: 2px;
-    background-color: #33cc99;
+    background-image: linear-gradient(#333, #000);
     color: #fff;
 }
 
@@ -160,8 +160,8 @@ select{
     overflow: hidden;
 
     .form__title{
-        background-color: #eef7fe;
-        color: #000;
+        background-image: linear-gradient(#333, #000);
+        color: #fff;
         padding: 8px 12px;
     }
 
@@ -174,6 +174,7 @@ select{
         // align-items: center;
         background-color: #f7f7f7;
         padding: 8px 12px;
+        display: flex;
     }
 
     .form__control{
