--- a/src/components/HeroSlider/Hero.scss
+++ b/src/components/HeroSlider/Hero.scss
@@ -1,20 +1,22 @@
 .hero-slider{
-    height: 360px;
     .swiper-container{
-         height: 100%;
-
             .hero-slider__img{
-               object-fit: cover;
-               height: 100%;
-               width: 100%;
+                height: 368px;
+                object-fit: cover;
             }
     }
 }
 
-@media (max-width: 1023px){
+@media (min-width: 769px) and (max-width: 1024px) {
     .hero-slider__img{
-        width: unset;
-        object-fit: cover;
+        height: 300px !important;
+        object-fit: cover !important;
     }
 }
 
+@media (max-width: 768px){
+    .hero-slider__img{
+        object-fit: fill !important;
+        height: 140px !important;
+    }
+}
