--- a/src/components/HeroSlider/Hero.scss
+++ b/src/components/HeroSlider/Hero.scss
@@ -1,4 +1,5 @@
 .hero-slider{
+    background-color: #110e0b;
     .swiper-container{
             .hero-slider__img{
                 height: 368px;
