--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -61,6 +61,10 @@ a{
     text-decoration: none;
 }
 
+// ul, li{
+//     list-style: none;
+// }
+
 .product__list{
     border-left: 1px solid #f1f1f1;
     border-top: 1px solid #f1f1f1;
