--- a/src/pages/admin/components/Sidebar/Sidebar.scss
+++ b/src/pages/admin/components/Sidebar/Sidebar.scss
@@ -1,52 +1,41 @@
 .sidebar{
-    //background-color: var(--extra-color);
-    background-image: linear-gradient(#333, #000);
+    background-color: #fff;
+    box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.2);
     position: fixed;
     left: 0;    
     top: 0;
     bottom: 0;
     right: 80%;
-    padding: 20px;
 
     &__logo{
         font-size: 2.7rem;
         font-weight: 600;
-        margin-bottom: 10px;
-        color: #fff;
+        margin: 10px 0;
+        color: #000;
         text-align: center;
     }
 
     &__list{
-     
-        .active{
-            padding: 10px;
-            text-decoration: none;
-            font-size: 1.5rem;
-            background-color: #0d6efd;
-            border-radius: 4px;
-            width: 100%;
-            display: inline-block;
-            color: #fff;
-            font-weight: 500;
-            &:hover{
-                color: #fff;
-            }
-        }
-
+        
         &-item{
-            list-style: none;
-            margin-top: 8px;
+            //list-style: none;
+            margin-bottom: 4px;
 
-            .sidebar__list-link{
-                padding: 10px;
-                text-decoration: none;
-                font-size: 1.5rem;
-                background-color: transparent;
-                border-radius: 4px;
+            & .active{
+                background-color: var(--extra-color);
                 width: 100%;
                 display: inline-block;
                 color: #fff;
-                font-weight: 500;
+                font-weight: 600;   
+                padding: 10px 10px 10px 20px; 
+            }
+
+            .sidebar__list-link{
+                padding: 10px 10px 10px 20px;
+                font-size: 1.5rem;
+                display: inline-block;
+                color: #000;
+                font-weight: 500;                
             }
         }
 
