--- a/src/pages/clients/Account/AccountInfo/AccountInfo.scss
+++ b/src/pages/clients/Account/AccountInfo/AccountInfo.scss
@@ -6,8 +6,9 @@
         margin: 20px 0;
         font-weight: 400;
         font-size: 1.5rem;
-        span{
-            font-weight: 800;
+        
+        & span:nth-child(2){
+            font-weight: 600;
         }
     }
 }
