--- a/src/pages/admin/components/Header/Header.scss
+++ b/src/pages/admin/components/Header/Header.scss
@@ -1,36 +1,41 @@
-.header__admin{
+.admin__header{
     background-color: #fff;
-   //background-image: linear-gradient(#333, #000);
     box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.2);
+    padding: 0px 30px;
     display: flex;
-    justify-content: flex-end;
     height: 60px;
     line-height: 60px;
     position: fixed;
     top: 0;
     right: 0;
-    left: 20%;
+    left: 0;
 
-    .header__right{
-        margin-right: 26px;
-        display: flex;
-        align-items: center;
-        gap: 20px;
+    .header__logo{
+        width: 30%;
+        color: #000;
+        font-size: 3rem;
+        font-weight: 700;        
+    }
 
-        .header__admin__name,
-        .header__admin__link,
-        .header__admin__logout {
-            color: #000;
+    .header__info{
+        width: 70%;
+        text-align: right;
+        
+        &-name{
+            font-weight: 200;
         }
 
-        .header__admin__logout{
+        &-icon{
+            color: #000;
+            margin: 0 20px;
+        }
+
+        &-logout{
             background-color: transparent;
-            padding-right: 18px;
-            cursor: pointer;
             font-size: 1.6rem;
-    
+            
             &:hover{
-                opacity: 0.8;
+                color: red;
             }
         }
     }
