--- a/src/pages/admin/components/Sidebar/Sidebar.scss
+++ b/src/pages/admin/components/Sidebar/Sidebar.scss
@@ -1,6 +1,6 @@
 .admin__sidebar{
     background-color: #fff;
-   // box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.2);
     position: fixed;
     left: 0;    
     top: calc(0px + 60px);// 60px of header
@@ -22,7 +22,7 @@
             }
 
             .sidebar__list-link{
-                padding: 12px 10px 12px 20px;
+                padding: 10px 0 10px 20px;
                 font-weight: 600;   
                 font-size: 1.5rem;
                 display: inline-block;
