--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,8 @@
 @import './components/pratice';
 @import './components/productcard';
 @import './components/productview';
+@import'./components/order-list';
+
 
 @import './pages/auth';
 @import './pages/home';
@@ -25,3 +27,4 @@
 @import './pages/checkout';
 @import './pages/product';
 @import './pages/searchheader';
+@import "./pages/accountorder";
