--- a/src/styles/pages/_auth.scss
+++ b/src/styles/pages/_auth.scss
@@ -249,13 +249,14 @@
         width: 100%;
         margin: 10px 0 32px 0;
         border-radius: 999px;
-        color: var(--primary-color);
+        color: #000;
         background-color: var(--secondary-color);
         font-size: 1.8rem;
         font-weight: 400;
         padding: 12px 0;
+        
         &:hover{
-            color: var(--text-color);
+            opacity: .8;
         }
     }
 }
