--- a/src/components/CartItem/CartItem.scss
+++ b/src/components/CartItem/CartItem.scss
@@ -1,24 +1,36 @@
 .cart__product__item{
     display: flex;
     align-items: center;
-    padding: 10px 10px 0 10px;
-
+    
     .product__img{
-        width: 20%;
+        margin-right: 10px;
+        border: 1px solid #eee;
         height: 120px;
-        object-fit: contain;
+        width: 120px;
+        overflow: hidden;
+
+        img{
+            width: 100%;
+            height: 100px;
+            object-fit: contain;
+            position: relative;
+            top: 7%;
+        }
     }
-    .product__name{
+
+    .product__info{
         width: 62%;
         padding: 0px 2px;
         
-        &-title{
+        .product__name{
             font-weight: 300;
             padding-bottom: 5px;
         }
 
         .product__qty{
-            width: 30%;
+            width: 32%;
+            background-color: #f8f8fc;
+
             .cart__item-qty{
                 display: flex;
                 align-items: center;
@@ -26,7 +38,7 @@
                 font-size: 1.5rem;
                 font-weight: 300;
                 text-align: center;
-                border: 1px solid #ced4da;
+                border: 1px solid rgb(228, 229, 240);
                 padding: 6px;
                 border-radius: 4px;
         
@@ -39,6 +51,11 @@
                         opacity: 0.8;
                     }
                 }
+
+                .disable{
+                    cursor: not-allowed !important;
+                    color: #ccc;
+                }
         
                 .cart__item-qty-input{
                     width: 100%;
@@ -47,21 +64,22 @@
             }
         }
     }
+
     .product__price{
         width: 18%;
         text-align: center;
-        color: #ed3324;
+        color: var(--main-color);
         font-size: 1.6rem;
         font-weight: bold;
 
         & div:nth-child(2){
             padding-top: 6px;
             cursor: pointer;
-        }
-        
-        i{
-            font-size: 1.7rem;
-            margin-top: 6px;
+            font-size: 1.4rem;
+            font-weight: 400;
+            &:hover{
+                color: red;
+            }
         }
     }
 }
