--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -13,8 +13,8 @@ html{
 body{
     font-family: "Roboto", sans-serif;
     font-size: 1.5rem;
-    background-color: #f8f8f8;
-    color: #333;
+    background-color: #f8f8fc;
+    color: #333333;
     //line-height: 1.25rem;
 }
 
