--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,10 +1,10 @@
 .header__container{
   background-color: #fff;
   padding-top: 16px;
-  //position: relative;
   position: sticky;
   top: 0;
   z-index: 999;
+  box-shadow: 0 1.5rem 1rem 0 rgba(0, 0,0, 0.1);
 
   .header__main {
     padding-bottom: 16px;
