--- a/src/components/ProductView/ProductView.scss
+++ b/src/components/ProductView/ProductView.scss
@@ -1,23 +1,33 @@
 .product__detail{
-
+    background-color: #fff;
+    padding: 16px;
+    border-radius: 2px;
+    height: auto;
 }
 
-.product__img-list{
-    
-    .product__img-main{
-        height: 400px;
-        border: 1px solid var(--border-color);
-        object-fit: contain;
+.product__img__container{
+    width: 100%;
+    padding-right: 60px;
+
+    .product__img__main{
         width: 100%;
+        height: 350px;
+        margin-bottom: 8px;
+
+        img{
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
     }
 
-    .product__img-slide{
+    .product__img__slide{
         display: flex;
-        justify-content: space-between;
-    
+        gap: 4px;
+
         .product__img-item{
-            width: 19.2%;
-            object-fit: cover;
+            width: calc(20% - 4px);
+            object-fit: contain;
             &:active{
                 border: 1px solid var(--primary-color);
             }
@@ -26,8 +36,6 @@
 }
 
 .product__info{
-    padding-left: 20px;
-
     .product__title{
         font-size: 2.2rem;
         font-weight: 600;
@@ -60,12 +68,16 @@
     }
 
     .product__brand{
-        margin: 20px 0; 
+        margin: 20px 0;
+        
+        & span:nth-child(2){
+            color: var(--main-color);
+        }
     }
 
     .product__price{
         margin-bottom: 18px;
-        color: var(--text-color-price);
+        color: var(--main-color);
         font-weight: 800;
         font-size: 2.2rem;
         padding-right: 8px;
@@ -104,7 +116,7 @@
     }
 
     .product__des{
-        margin-bottom: 20px;
+        margin-bottom: 50px;
 
         &-title{
             font-size: 1.8rem;
@@ -116,72 +128,41 @@
             font-size: 1.5rem;
             text-align: justify;
             line-height: 1.6;
+            font-weight: 300;
         }
     }
 
-    .product__submit{
+    .product__action{
         display: flex;
-        gap: 6px;
-       
-    
-
-        @media screen and (max-width: 1023px) {
-            width: 100%;
-        }
-       
+        width: 80%;
 
         button{
             border: none;
             outline: none;
-            border-radius: 5px;
+            border-radius: 3px;
         }
 
         .btn-cart, .btn-buy{
-            padding: 12px 30px;
-    
+            padding: 16px 0;
+            border: 1px solid var(--main-color);    
+            text-transform: uppercase;
+            flex: 1 1 0%;
         }
 
         .btn-cart{
-            width: 40%;
-            background: -webkit-linear-gradient(top, #666, #000);
-        
-            span{
-                display: block;
-            }
-    
-            & span:nth-child(1){
-                font-size: 1.7rem;
-                color: #fee437;
-                text-transform: uppercase;
-            }
-    
-            & span:nth-child(2){
-                color: #fff;
-                font-size: 1.4rem;
-                font-weight: 300;
-            }
+           background-color: #fff;
+           color: var(--main-color);
+           
         }
 
         .btn-buy{
-            width: 60%;
-           background: -webkit-linear-gradient(top, #ffef98, #ffdf00);
-    
-           span{
-            color: #000;
-            display: block;
-           }
+            background-color: var(--main-color  );
+            color: #fff;
+            margin-right: 8px;
 
-           & span:nth-child(1){
-            text-transform: uppercase;
-            font-size: 1.8rem;
-            font-weight: 700;
+           &:hover{
+                filter: brightness(0.9)
            }
-
-           & span:nth-child(2){
-            font-size: 1.4rem;
-            font-weight: 300;
-           }
-           
         }
     }
 }
