--- a/src/components/SubHeader/SubHeader.scss
+++ b/src/components/SubHeader/SubHeader.scss
@@ -1,6 +1,7 @@
 .subheader__container {
     background-color: #1435c3;
-    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0,0, 0.1);
+    //box-shadow: 0 0.5rem 1rem 0 rgba(0, 0,0, 0.1);
+    
 
     .subheader__list{
         width: 100%;
