--- a/src/pages/Cart/Cart.scss
+++ b/src/pages/Cart/Cart.scss
@@ -1,269 +1,211 @@
-
-.cart{
-    width: 50%;
-    margin: 0 auto;
-    
+.cart__container{
     --color-button: #f3f4f6;
-    
+    margin: 30px 0;
+    border-radius: 2px;
+        
     .cart__empty{
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin: 30px 0 80px 0;
+        padding-bottom: 20px;
+        background-color: #fff;
 
-        .cart__title{
-            font-size: 2.2rem;
+        .cart__img{
+            width: 30%; 
         }
-
+    
+        .cart__title{
+            font-size: 2rem;
+        }
+    
         .cart__home{
-            font-size: 1.4rem;
+            font-size: 1.3rem;
             font-weight: 300;
             margin: 18px 0;
         }
-
+    
         .cart__btn{
             padding: 10px 24px;
-            background-color: #fff;
+            color: #fff;
+            background-color: var(--main-color);
             font-weight: 500;
-            color: var(--btn-color);
-            border: 1px solid var(--btn-color);
-
+            border: 1px solid var(--main-color);
+          
+    
             &:hover{
-                background-color: var(--btn-color);
-                color: #fff;
+               opacity: 0.9;
             }
         }
+    }
+    
+    .cart__info{
+        width: 50%;
+        margin: 0 auto;
 
-        .cart__img{
-            width: 50%;
+        .cart__header{   
+            font-weight: bold;
+            text-align: center;
+            margin: 20px 0 10px;
+        }
+    
+        .cart__other-product{
+            text-align: center;
+            border: 1px solid #e5e7eb;
+            padding: 8px 0;
+            margin-top: 10px;
+            cursor: pointer;
+            font-size: 1.5rem;
+            font-weight: 700;
+            
+    
+            .cart__header-link{
+                color: var(--main-color);
+                display: block;
+    
+                &:hover{
+                    color: #000;
+                }
+            }
+        }
+    
+        .cart__content{
+            box-shadow: 0 0 18px rgb(0 0 0 / 12%);
             background-color: #fff;
-            margin-bottom: 22px;
-            margin-top: 80px;
-        }
-    }
-
-    .cart__header{   
-        font-weight: bold;
-        text-align: center;
-        margin: 20px 0 10px;
-    }
-
-    .cart__other-product{
-        text-align: center;
-        border: 1px solid #e5e7eb;
-        padding: 8px 0;
-        margin-top: 10px;
-        cursor: pointer;
-        font-size: 1.5rem;
-        font-weight: 700;
-        
-
-        .cart__header-link{
-            color: #288ad6;
-            display: block;
-
-            &:hover{
-                color: #000;
-            }
-        }
-    }
-
-    .cart__content{
-        box-shadow: 0 0 18px rgb(0 0 0 / 12%);
-        background-color: #fff;
-        border-radius: 8px;
-        padding: 10px;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-
-        .cart__product__item{
-            display: flex;
-            align-items: center;
-
-            .product__img{
-                width: 20%;
-                height: 120px;
-                object-fit: contain;
-            }
-            .product__name{
-                width: 62%;
-                padding: 0px 2px;
-                
-                &-title{
-                    font-weight: 300;
-                    padding-bottom: 5px;
-                }
-
-                .product__qty{
-                    width: 30%;
-                    .cart__item-qty{
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        font-size: 1.5rem;
-                        font-weight: 300;
-                        text-align: center;
-                        border: 1px solid #ced4da;
-                        padding: 6px;
-                        border-radius: 4px;
-                
-                        .cart__item-qty-btn{
-                            width: 40px;
-                            cursor: pointer;
-                
-                            i{
-                                font-size: 1.3rem;
-                                opacity: 0.8;
-                            }
-                        }
-                
-                        .cart__item-qty-input{
-                            width: 100%;
-                            font-size: 1.6rem;
-                        }
-                    }
-                }
-            }
-            .product__price{
-                width: 18%;
-                text-align: center;
-                color: red;
-                font-size: 1.6rem;
-                font-weight: bold;
-
-                & div:nth-child(2){
-                    padding-top: 6px;
-                    cursor: pointer;
-                }
-            }
-        }
-
-        .cart__total{
+            border-radius: 8px;
             padding: 10px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            font-size: 1.5rem;
-            font-weight: 300;
-            border-bottom: 1px solid #e5e7eb;
-            background-color: var(--color-button);
-            border-radius: 5px;
-
-            & span:nth-child(2){
-                font-size: 1.6rem;
-                color: red;
-                font-weight: bold;
-            }
-        }
-
-        .cart__customer{
-         
-            .item{
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                margin-top: 10px;
-
-                label{
-                    min-width: 130px;
-                    span{
-                        color: red;
-                    }
-                }
-
-                .item-input{
-                    flex: 1;
-                    font-size: 1.4rem;
-                    padding: 0 10px;
-                    height: 38px;
-                    border-radius: 5px;
-                    border: 1px solid #cdcdcd;
-                }
-                .item-textarea{
-                    resize: none;
-                    flex: 1;
-                    font-size: 1.4rem;
-                    padding: 5px 10px;
-                    height: 34px;
-                    min-height: 45px;
-                    border-radius: 5px;
-                    border: 1px solid #cdcdcd;
-                    font-family: sans-serif;
-                }
-            }
-
-            &__header{
-                font-size: 1.6rem;
-                font-weight: 700;
-                padding-top: 10px;
-            }
-        }
-
-        .cart__pay-total{
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 10px;
-            border-bottom: 1px solid #e5e7eb;
-            background-color: var(--color-button);
-            font-size: 1.5rem;
-            font-weight: 300;
-            border-radius: 5px;   
-
-            & span:nth-child(2){
-                font-size: 1.6rem;
-                color: red;
-                font-weight: bold;
-            }
-        }
-
-        .cart__btn{
             display: flex;
             flex-direction: column;
             gap: 10px;
+
+            .cart__total{
+                padding: 10px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                font-size: 1.5rem;
+                font-weight: 300;
+                border-bottom: 1px solid #e5e7eb;
+                background-color: var(--color-button);
+                border-radius: 5px;
+    
+                & span:nth-child(2){
+                    font-size: 1.6rem;
+                    color: var(--main-color);
+                    font-weight: bold;
+                }
+            }
+    
+            .cart__customer{
+                .item{
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    margin-top: 10px;
+    
+                    label{
+                        min-width: 130px;
+                        span{
+                            color: red;
+                        }
+                    }
+    
+                    .item-input{
+                        flex: 1;
+                        font-size: 1.4rem;
+                        padding: 0 10px;
+                        height: 38px;
+                        border-radius: 5px;
+                        border: 1px solid #cdcdcd;
+                    }
+
+                    .item-textarea{
+                        resize: none;
+                        flex: 1;
+                        font-size: 1.4rem;
+                        padding: 5px 10px;
+                        height: 34px;
+                        min-height: 45px;
+                        border-radius: 5px;
+                        border: 1px solid #cdcdcd;
+                        font-family: sans-serif;
+                    }
+                }
+    
+                &__header{
+                    font-size: 1.6rem;
+                    font-weight: 700;
+                    padding-top: 10px;
+                }
+            }
+    
+            .cart__pay-total{
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                padding: 10px;
+                border-bottom: 1px solid #e5e7eb;
+                background-color: var(--color-button);
+                font-size: 1.5rem;
+                font-weight: 300;
+                border-radius: 5px;   
+    
+                & span:nth-child(2){
+                    font-size: 1.6rem;
+                    color: var(--main-color);
+                    font-weight: bold;
+                }
+            }
+    
+            .cart__btn{
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
             
-
-            --size-word: 1.6rem;
-
-            &-buy{
-                border-radius: 5px;
-                //background: -webkit-linear-gradient(top,#ffef98,#ffdf00);
-                background: -webkit-linear-gradient(top,#288ad6,#0e74c2);
-                color: #fff;
-
-                & p:nth-child(1){
-                    text-transform: uppercase;
-                    font-size: var(--size-word);
+                --size-word: 1.6rem;
+    
+                &-buy{
+                    border-radius: 5px;
+                    //background: -webkit-linear-gradient(top,#ffef98,#ffdf00);
+                   // background: -webkit-linear-gradient(top,#288ad6,#0e74c2);
+                   background: #1435c3;
+                    color: #fff;
+    
+                    & p:nth-child(1){
+                        text-transform: uppercase;
+                        font-size: var(--size-word);
+                    }
+                    & p:nth-child(2){
+                        font-weight: 400;
+                        padding-top: 8px;
+                    }
                 }
-                & p:nth-child(2){
-                    font-weight: 400;
-                    padding-top: 8px;
+    
+                &-online{
+                    color: #fff;
+                    border-radius: 5px;
+                    background: -webkit-linear-gradient(top,#666,#000);
+                    
+                    & p:nth-child(1){
+                        text-transform: uppercase;
+                        font-size: var(--size-word);
+                    }
+                    & p:nth-child(2){
+                        font-weight: 400;
+                        padding-top: 8px;
+                    }
                 }
-            }
-
-            &-online{
-                color: #fff;
-                border-radius: 5px;
-                background: -webkit-linear-gradient(top,#666,#000);
-                
-                & p:nth-child(1){
-                    text-transform: uppercase;
-                    font-size: var(--size-word);
+    
+                & button:disabled{
+                    cursor: not-allowed;
                 }
-                & p:nth-child(2){
-                    font-weight: 400;
-                    padding-top: 8px;
-                }
-            }
-
-            & button:disabled{
-                cursor: not-allowed;
             }
         }
     }
-}
+    
+       
+    }
+
 
 @media screen and (max-width: 767px) {
     .cart{
