update ui header

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -42,6 +42,7 @@
                 -webkit-text-fill-color: transparent;
                 text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4);
                 font-weight: 500;
+                text-transform: uppercase;
              }
 
              .desc{
