--- a/src/components/CartItem/CartItem.scss
+++ b/src/components/CartItem/CartItem.scss
@@ -1,85 +1,126 @@
 .cart__product__item{
     display: flex;
     align-items: center;
-    
+    padding: 10px 0;
+
+    & + .cart__product__item{
+        border-top: 1px solid #eee;
+    }
+
     .product__img{
-        margin-right: 10px;
-        border: 1px solid #eee;
-        height: 120px;
-        width: 120px;
+        height: 100%;
+        width: 20%;
         overflow: hidden;
 
         img{
-            width: 100%;
-            height: 100px;
+            width: 90%;
+            height: 90%;
             object-fit: contain;
-            position: relative;
-            top: 7%;
         }
     }
 
-    .product__info{
-        width: 62%;
-        padding: 0px 2px;
-        
-        .product__name{
-            font-weight: 300;
-            padding-bottom: 5px;
-        }
+    .product__main{
+        width: 80%;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        padding-left: 10px;
 
-        .product__qty{
-            width: 32%;
-            background-color: #f8f8fc;
-
-            .cart__item-qty{
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                font-size: 1.5rem;
+        .product__info{
+            width: 75%;
+            padding: 0px 2px;
+            
+            .product__name{
                 font-weight: 300;
-                text-align: center;
-                border: 1px solid rgb(228, 229, 240);
-                padding: 6px;
-                border-radius: 4px;
-        
-                .cart__item-qty-btn{
-                    width: 40px;
-                    cursor: pointer;
-        
-                    i{
-                        font-size: 1.3rem;
-                        opacity: 0.8;
+                padding-bottom: 5px;
+            }
+    
+            .product__qty{
+                width: 32%;
+                background-color: #f8f8fc;
+    
+                .cart__item-qty{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    font-size: 1.5rem;
+                    font-weight: 300;
+                    text-align: center;
+                    border: 1px solid rgb(228, 229, 240);
+                    padding: 6px;
+                    border-radius: 4px;
+            
+                    .cart__item-qty-btn{
+                        width: 40px;
+                        cursor: pointer;
+            
+                        i{
+                            font-size: 1.3rem;
+                            opacity: 0.8;
+                        }
+                    }
+    
+                    .disable{
+                        cursor: not-allowed !important;
+                        color: #ccc;
+                    }
+            
+                    .cart__item-qty-input{
+                        width: 100%;
+                        font-size: 1.6rem;
                     }
                 }
+            }
+        }
 
-                .disable{
-                    cursor: not-allowed !important;
-                    color: #ccc;
+        @media screen and (max-width: 500px) {
+            .product__info{
+                width: 100%;
+                margin-bottom: 10px;
+
+                .product__name{
+                    font-size: 1.4rem;
                 }
-        
-                .cart__item-qty-input{
-                    width: 100%;
-                    font-size: 1.6rem;
+
+                .product__qty{
+                    width: 36%;
+
+                    .cart__item-qty{
+                        padding: 2px;
+                    }
+                }
+            }
+        }
+    
+        .product__price{
+            width: 25%;
+            text-align: center;
+            color: var(--main-color);
+            font-size: 1.6rem;
+            font-weight: bold;
+    
+            & div:nth-child(2){
+                padding-top: 6px;
+                cursor: pointer;
+                font-size: 1.4rem;
+                font-weight: 400;
+                &:hover{
+                    color: red;
+                }
+            }
+        }
+        @media screen and (max-width: 500px) {
+            .product__price{
+                width: 100%;
+                text-align: left;
+                font-size: 1.4rem;
+                
+                & div:nth-child(2){
+                    font-size: 1.2rem;
                 }
             }
         }
     }
 
-    .product__price{
-        width: 18%;
-        text-align: center;
-        color: var(--main-color);
-        font-size: 1.6rem;
-        font-weight: bold;
-
-        & div:nth-child(2){
-            padding-top: 6px;
-            cursor: pointer;
-            font-size: 1.4rem;
-            font-weight: 400;
-            &:hover{
-                color: red;
-            }
-        }
-    }
+   
 }
