--- a/src/pages/Cart/Cart.scss
+++ b/src/pages/Cart/Cart.scss
@@ -1,9 +1,9 @@
 .cart__container{
     --color-button: #f3f4f6;
     margin: 30px 0;
-    border-radius: 2px;
-        
+
     .cart__empty{
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -35,6 +35,25 @@
     
             &:hover{
                opacity: 0.9;
+            }
+        }
+    }
+
+    @media screen and (max-width: 769px) {
+        .cart__empty{
+            width: 85%;
+            margin: 0 auto;
+        }
+    }
+
+    @media screen and (max-width: 320px) {
+        .cart__empty{
+            .cart__title{
+                font-size: 1.8rem;
+                text-align: center;
+            }
+            .cart__home{
+                text-align: center;
             }
         }
     }
@@ -72,7 +91,7 @@
         .cart__content{
             box-shadow: 0 0 18px rgb(0 0 0 / 12%);
             background-color: #fff;
-            border-radius: 8px;
+            border-radius: 3px;
             padding: 10px;
             display: flex;
             flex-direction: column;
@@ -203,18 +222,19 @@
         }
     }
     
-       
+    @media screen and (max-width: 769px) {
+        .cart__info{
+            width: 90%;
+        }
     }
 
-
-@media screen and (max-width: 767px) {
-    .cart{
-        width: 100%;
-    }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .cart{
-        width: 80%;
+    @media screen and (min-width: 768px) and (max-width: 1023px) {
+        .cart__info{
+            width: 70%;
+        }
     }
 }
+
+
+
+
