--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -2,15 +2,30 @@
 .catalog__product__filter{
     .catalog__filter{
         display: flex;
+        flex-wrap: wrap;
         align-items: center;
-        gap: 20px;
         margin-bottom: 8px;
+
+        span{
+            font-size: 1.5rem;
+            width: 100px;
+        }
+
+        @media screen and (max-width: 408px ) {
+            span{
+               width: 100%;
+               margin-bottom: 8px;
+            }
+        }
         
         .catalog__list{
+            width: calc(100% - 100px);
             list-style: none;
             display: flex;
-            gap: 20px;
+            flex-wrap: wrap;
+    
             .catalog__item{
+                margin-right: 16px;
                 .catalog__link{
                     text-decoration: none;
                     color: #000;
@@ -30,6 +45,16 @@
                 }
             }
         }
+        @media screen and (max-width: 408px ) {
+            .catalog__list{
+                width: 100%;
+
+                .catalog__item{
+                    flex: 1;
+                    margin-right: 0;
+                }
+            }
+        }
     }
 
     .filter__group{
@@ -41,13 +66,14 @@
         }
 
         .filter__list{
-            margin: 10px 0;
+            margin-bottom: 10px;
             display: flex;
             align-items: center;
             flex-wrap: wrap;
-            gap: 20px;
+            
             .filter__item{
-                line-height: 3rem;
+                line-height: 2.6rem;
+                padding: 3px 20px 3px 0;
             }
         }
 
@@ -74,8 +100,8 @@
         }
         
         button{
-            width: 16%;
-            padding: 10px 0;
+  
+            padding: 10px 60px;
             background-color: var(--main-color);
             border: none;
             color: #fff;
@@ -83,6 +109,12 @@
             cursor: pointer;
             &:hover{
                 filter: brightness(1.2);
+            }
+        }
+
+        @media screen and (max-width: 769px) {
+            button{
+                padding: 10px 30px;
             }
         }
     }
