--- a/src/pages/NotFound/NotFound.scss
+++ b/src/pages/NotFound/NotFound.scss
@@ -1,8 +1,10 @@
 .page-404{
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #fff;
 
     .page-404__title{
         font-size: 3rem;
@@ -22,15 +24,13 @@
 
     .page-404__btn{
         padding: 10px 24px;
-        background-color: #fff;
+        background-color: var(--main-color);
         font-weight: 500;
-        color: var(--btn-color);
-        border: 1px solid var(--btn-color);
+        color: #fff;
         margin-bottom: 60px;
 
         &:hover{
-            background-color: var(--btn-color);
-            color: #fff;
+            opacity: 0.8;
         }
     }
 
@@ -39,5 +39,25 @@
         background-color: #fff;
         margin-bottom: 22px;
         margin-top: 80px;
+    }
+}
+
+@media screen and (max-width: 769px) {
+    .page-404{
+        width: 85%;
+        margin: 0 auto;
+
+        .page-404__img{
+            max-width: 220px;
+        }
+
+        .page-404__title{
+            font-size: 2rem;
+            text-align: center;
+        }
+
+        .page-404__home{
+            font-size: 1.3rem;
+        }
     }
 }
